# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--lcourtes@laas.fr--2006-libre/guile-avahi--devo--0
#

2007-05-18 17:07:06 GMT	Ludovic Courtes <ludovic.courtes@laas.fr>	patch-9

    Summary:
      Added the error framework.
    Revision:
      guile-avahi--devo--0--patch-9

    * Makefile.am (SUBDIRS): Have `doc' after `src' so that everything's
      generated by then.
    
    * modules/avahi.scm: Updated.
    
    * modules/avahi/build/enums.scm (%error-enum): New.
      (%avahi-common-enums): Use it.
    
    * src/Makefile.am (noinst_HEADERS): Added `errors.h'.
      (BUILT_SOURCES): Added `errors.c.x'.
      (libguile_avahi_v_0_la_SOURCES): Added `errors.c'.
    
    * src/client.c: Include "errors.h".
      (scm_avahi_make_client): Use `scm_avahi_error ()'.
    
    * src/common.c: Include "errors.h".
      (scm_avahi_make_guile_poll, scm_avahi_make_simple_poll,
      scm_avahi_iterate_simple_poll, scm_avahi_run_simple_poll): Use
      `scm_avahi_error ()'.
      (scm_avahi_common_init): Call `scm_avahi_init_error ()'.
    
    * src/make-enum-header.scm (main): Define `AVAHI_ERR_OK'.
    
    * src/utils.c: Include "errors.h".
      (scm_from_avahi_watch_events): Use `scm_avahi_error ()'.
    
    * src/utils.h: Include "config.h".
      (EXPECT, NORETURN): New macros.
    
    * src/watch.c: Include "errors.h".
      (scm_avahi_invoke_watch, scm_avahi_invoke_timeout): Use
      `scm_avahi_error ()'.

    new files:
     src/errors.c src/errors.h

    modified files:
     ChangeLog Makefile.am modules/avahi.scm
     modules/avahi/build/enums.scm src/Makefile.am src/client.c
     src/common.c src/make-enum-header.scm src/utils.c src/utils.h
     src/watch.c


2007-05-18 16:13:24 GMT	Ludovic Courtes <ludovic.courtes@laas.fr>	patch-8

    Summary:
      Added the documentation framework (from Guile-GnuTLS).
    Revision:
      guile-avahi--devo--0--patch-8

    * Makefile.am (SUBDIRS): Added `doc'.
    